<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.alturkovic</groupId>
  <artifactId>distributed-lock</artifactId>
  <version>3.0.0</version>
  <packaging>pom</packaging>

  <name>distributed-lock</name>
  <description>Distributed locking</description>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.2</version>
  </parent>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Alen Turković</name>
      <email>alturkovic@gmail.com</email>
      <organizationUrl>https://github.com/alturkovic</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/alturkovic/distributed-lock.git</connection>
    <developerConnection>scm:git:ssh://github.com:alturkovic/distributed-lock.git</developerConnection>
    <url>http://github.com/alturkovic/distributed-lock/tree/master</url>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>21</java.version>
    <spring-retry.version>2.0.11</spring-retry.version>
  </properties>

  <modules>
    <module>distributed-lock-api</module>
    <module>distributed-lock-core</module>
    <module>distributed-lock-jdbc</module>
    <module>distributed-lock-mongo</module>
    <module>distributed-lock-redis</module>
    <module>distributed-lock-example</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.github.alturkovic</groupId>
        <artifactId>distributed-lock-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.alturkovic</groupId>
        <artifactId>distributed-lock-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.alturkovic</groupId>
        <artifactId>distributed-lock-jdbc</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.alturkovic</groupId>
        <artifactId>distributed-lock-mongo</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.alturkovic</groupId>
        <artifactId>distributed-lock-redis</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
